--- a/pom.xml
+++ b/pom.xml
@@ -39,5 +39,20 @@
 			<artifactId>jersey-media-json-jackson</artifactId>
 			<version>2.29</version>
 		</dependency>
+		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>okhttp</artifactId>
+			<version>3.14.2</version>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.nimbusds</groupId>
+			<artifactId>nimbus-jose-jwt</artifactId>
+			<version>7.5.1</version>
+		</dependency>
 	</dependencies>
 </project>
