--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,10 +1,17 @@
-#ProviderServices
+#Provider Services Messages
 get=GET Provider Service: got it!!
 delete=DELETE Provider Service: got it!!
 ko=KO
 tokenNotValid=Token not valid!
 ok=OK
 
-brokerOpenwireUri=tcp://192.168.56.102:61816
-dapsJWKSUrl=XXX
+#Broker URI
+brokerOpenwireUri=tcp://192.168.56.102:61616
+#DAPS URI for validating
+dapsJWKSUrl=https://daps.aisec.fraunhofer.de/.well-known/jwks.json
 
+#Provider URIs
+uriSchema=http
+uriAuthority=//w3id.org/engrd
+uriPath=/autogen/artifactResponseMessage/
+uriConnector=/connector/
