--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -9,6 +9,8 @@ ok=OK
 brokerOpenwireUri=tcp://192.168.56.102:61616
 #DAPS URI for validating
 dapsJWKSUrl=https://daps.aisec.fraunhofer.de/.well-known/jwks.json
+#Clearing House enpoint
+clearingHouseUri=https://idsa-ch.orbiter.de/logs/messages
 
 #Provider URIs
 uriSchema=http
